// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "آنلاین کار کن",
  ],
  "props": {
    "className": "span bg-light-primary text-primary py-1 sm:py-2 px-2 sm:px-4 font-Estedad-Medium text-[10px] sm:text-xs rounded-full primary",
  },
  "type": "span",
}
`;

exports[`renders correctly 2`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "آنلاین کار کن",
  ],
  "props": {
    "className": "span bg-light-primary text-primary py-1 sm:py-2 px-2 sm:px-4 font-Estedad-Medium text-[10px] sm:text-xs rounded-full primary medium full",
  },
  "type": "span",
}
`;

exports[`renders correctly 3`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "کوتاه بودن",
  ],
  "props": {
    "className": "span bg-light-success text-success py-1 sm:py-2 px-2 sm:px-4 font-Estedad-Medium text-[10px] sm:text-xs rounded-full",
  },
  "type": "span",
}
`;

exports[`renders correctly 4`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "زیبا بودن",
  ],
  "props": {
    "className": "span bg-light-warning text-warning py-1 sm:py-2 px-2 sm:px-4 font-Estedad-Medium text-[10px] sm:text-xs rounded-full",
  },
  "type": "span",
}
`;

exports[`renders correctly 5`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "فارسی بودن",
  ],
  "props": {
    "className": "span bg-light-danger text-danger py-1 sm:py-2 px-2 sm:px-4 font-Estedad-Medium text-[10px] sm:text-xs rounded-full",
  },
  "type": "span",
}
`;
